Utility configuration update